--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "concurrently \"npm start --prefix backend\" \"npm start --prefix frontend\"",
-    "install-all": "npm install --prefix backend && npm install --prefix frontend"
+    "install-all": "npm install --force --prefix backend && npm install --prefix frontend"
   },
   "keywords": [],
   "author": "",
